--- a/src/app/header/template.html
+++ b/src/app/header/template.html
@@ -1,4 +1,8 @@
 <div class="appHeader">
   <div class="appLogo"></div>
+  <div class="omnibarContainer">
+    <dm-search-box></dm-search-box>
+  </div>
+  <div class="accountContainer">My Account</div>
 </div>
 
