--- a/src/app/header/template.html
+++ b/src/app/header/template.html
@@ -3,6 +3,11 @@
   <div class="omnibarContainer">
     <dm-search-box></dm-search-box>
   </div>
-  <div class="accountContainer">My Account</div>
+  <div class="accountContainer">
+    <div class="profileName">Taylor</div>
+    <div class="profileImage">
+      <dm-small-avatar></dm-small-avatar>
+    </div>
+  </div>
 </div>
 
