--- a/src/app/core/style.css
+++ b/src/app/core/style.css
@@ -2,6 +2,12 @@
   box-sizing: border-box;
 }
 
+*:focus {
+  outline: 1px solid #4d90fe;
+  position: relative; /* Make the outline above other elements */
+}
+
 html {
   font-size: 62.5%;
 }
+
