--- a/src/app/mailbox/template.html
+++ b/src/app/mailbox/template.html
@@ -8,7 +8,10 @@
   </div>
 
   <div class="mailboxContents">
-    A clean inbox; some people never see this!
+    <div class="mailMessage"> A clean inbox; some people never see this! </div>
+    <div class="mailMessage"> <a href>Empty Trash now</a> (old messages will be automatically deleted) </div>
+    <div class="mailMessage"> No starred messages. Have you tried hearts? </div>
+    <dm-mail-item></dm-mail-item>
   </div>
 </div>
 
