--- a/src/app/small-avatar/style.css
+++ b/src/app/small-avatar/style.css
@@ -6,7 +6,7 @@
 }
 
 .avatarWrapper {
-  background-image: url(../../assets/img/microceratops-small-head.png);
+  background-image: url(/microceratops-small-head.png);
   background-size: 30px 30px;
   width: 100%;
   height: 100%;
