Use data from AJAX to populate header

--- a/src/app/header/template.html
+++ b/src/app/header/template.html
@@ -4,9 +4,9 @@
     <dm-search-box></dm-search-box>
   </div>
   <div class="accountContainer">
-    <div class="profileName">Taylor</div>
+    <div class="profileName">{{header.displayName}}</div>
     <div class="profileImage">
-      <dm-small-avatar></dm-small-avatar>
+      <dm-small-avatar img-src="{{header.avatarSource}}"></dm-small-avatar>
     </div>
   </div>
 </div>
