--- a/src/app/small-avatar/template.html
+++ b/src/app/small-avatar/template.html
@@ -1,4 +1,7 @@
 <div class="smallAvatar">
-  <div class="avatarWrapper"></div>
+  <div
+    class="avatarWrapper"
+    ng-style="{'background-image': 'url(' + avatar.imgSrc + ')'}"
+  ></div>
 </div>
 
