--- a/src/app/mailbox/template.html
+++ b/src/app/mailbox/template.html
@@ -7,11 +7,15 @@
     <dm-label-list></dm-label-list>
   </div>
 
-  <div class="mailboxContents">
-    <div class="mailMessage"> A clean inbox; some people never see this! </div>
+  <div class="mailboxContents" ng-switch="mailbox.email.length">
     <div class="mailMessage"> <a href>Empty Trash now</a> (old messages will be automatically deleted) </div>
     <div class="mailMessage"> No starred messages. Have you tried hearts? </div>
-    <dm-mail-item></dm-mail-item>
+    <div class="mailMessage" ng-switch-when="0"> A clean inbox; some people never see this! </div>
+    <dm-mail-item
+      ng-repeat="email in mailbox.email track by email.id"
+      mail="email"
+      ng-switch-default
+    ></dm-mail-item>
   </div>
 </div>
 
