--- a/src/app/mailbox/template.html
+++ b/src/app/mailbox/template.html
@@ -1,21 +1,11 @@
-<div class="mailbox">
-  <div class="mailboxLabels">
-    <div class="composeContainer">
-      <dm-button kind="primary"> Compose </dm-button>
-    </div>
-
-    <dm-label-list></dm-label-list>
-  </div>
-
-  <div class="mailboxContents" ng-switch="mailbox.email.length">
-    <div class="mailMessage" ng-if="mailbox.showTrashMessage()"> <a href>Empty Trash now</a> (old messages will be automatically deleted) </div>
-    <div class="mailMessage" ng-if="mailbox.showStarredMessage()" ng-switch-when="0"> No starred messages. Have you tried hearts? </div>
-    <div class="mailMessage" ng-if="mailbox.showOtherMessage()" ng-switch-when="0"> A clean inbox; some people never see this! </div>
-    <dm-mail-item
-      ng-repeat="email in mailbox.email track by email.id"
-      mail="email"
-      ng-switch-default
-    ></dm-mail-item>
-  </div>
+<div class="mailbox" ng-switch="mailbox.email.length">
+  <div class="mailMessage" ng-if="mailbox.showTrashMessage()"> <a href>Empty Trash now</a> (old messages will be automatically deleted) </div>
+  <div class="mailMessage" ng-if="mailbox.showStarredMessage()" ng-switch-when="0"> No starred messages. Have you tried hearts? </div>
+  <div class="mailMessage" ng-if="mailbox.showOtherMessage()" ng-switch-when="0"> A clean inbox; some people never see this! </div>
+  <dm-mail-item
+    ng-repeat="email in mailbox.email track by email.id"
+    mail="email"
+    ng-switch-default
+  ></dm-mail-item>
 </div>
 
