Add route for creating an email

--- a/src/app/mailbox-layout/template.html
+++ b/src/app/mailbox-layout/template.html
@@ -2,7 +2,7 @@
 <div class="pageBody">
   <div class="mailboxLabels">
     <div class="composeContainer">
-      <dm-button kind="primary"> Compose </dm-button>
+      <dm-button kind="primary" ui-sref="root.mail.compose"> Compose </dm-button>
     </div>
 
     <dm-label-list></dm-label-list>
