--- a/src/app/label-list/style.css
+++ b/src/app/label-list/style.css
@@ -1,25 +1,31 @@
 .labelItem {
-  padding-left: 30px;
+  padding-left: 0;
   margin-top: 2px;
+  margin: 0 14px;
   text-transform: capitalize;
 }
 
 .labelItem > a {
-  text-decoration: none;
+  display: block;
   color: inherit;
+  padding-left: 15px;
+  text-decoration: none;
+  width: 100%;
+}
+
+.labelItem > a:hover {
+  background-color: #eeeeee;
 }
 
 .activeLabel {
   border-left: 4px solid #dd4b39;
-  padding-left: 26px;
-}
-
-.labelItem:hover {
-  background-color: #eeeeee;
+  padding-left: 10px;
+  margin: 0
 }
 
 .additionalLabels {
   cursor: pointer;
+  padding-left: 15px;
 }
 
 .additionalLabels:hover {
