Remove annoying outline

--- a/src/app/core/style.css
+++ b/src/app/core/style.css
@@ -3,7 +3,7 @@
 }
 
 *:focus {
-  outline: 1px solid #4d90fe;
+  outline: none;
   position: relative; /* Make the outline above other elements */
 }
 
