Change buttons when mail selected

--- a/src/app/mail-item/template.html
+++ b/src/app/mail-item/template.html
@@ -1,5 +1,5 @@
 <div class="mailItem">
-  <div class="mailSelect"> <input type="checkbox" /> </div>
+  <div class="mailSelect"> <input type="checkbox" ng-model="mailItem.mail.selected" /> </div>
   <div class="mailStar"> S </div>
   <div class="mailFrom mailOverflow"> {{mailItem.mail.headers.from.name}} </div>
   <div class="mailContents mailOverflow"> 
