--- a/src/app/mail-item/template.html
+++ b/src/app/mail-item/template.html
@@ -7,6 +7,6 @@
     -
     <span class="mailBody">{{mailItem.mail.snippet}}</span>
   </div>
-  <div class="mailSent"> {{mailItem.mail.headers.sentDate}} </div>
+  <div class="mailSent"> {{mailItem.mail.headers.sentDate | dinoDate}} </div>
 </div>
 
