--- a/src/app/components/header/style.css
+++ b/src/app/components/header/style.css
@@ -6,7 +6,7 @@
 }
 
 .appLogo {
-  background-image: url(../../assets/img/microceratops-small.png);
+  background-image: url(../../../assets/img/microceratops-small.png);
   background-repeat: no-repeat;
   background-position: center;
   width: 200px;
